force-app/main/default/objects/Account/fields/Nickname2__c.field-meta.xml
<CustomField>
    <fullName>Nickname2__c</fullName>
    <label>Nickname2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>