force-app/main/default/objects/Account/fields/Nickname3__c.field-meta.xml
<CustomField>
    <fullName>Nickname3__c</fullName>
    <label>Nickname3</label>
    <length>250</length>
    <type>Text</type>
</CustomField>