force-app/main/default/objects/Account/fields/Nickname4__c.field-meta.xml
<CustomField>
    <fullName>Nickname4__c</fullName>
    <label>Nickname4</label>
    <length>250</length>
    <type>Text</type>
</CustomField>